Gestión de ficheros

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+    <!-- <img src="http://localhost:3000/imagen/productos/5f4ea9fd154a6e4cd49e813a-1599336725787.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZjQ0Mjc3NzZjZjAzYTJlZTQ2NzM1MmIiLCJub21icmUiOiJLZXZpbiIsImVtYWlsIjoiYWRtaW5Ac2Fkc2Eub20iLCJfX3YiOjB9LCJpYXQiOjE1OTkzMzUxMzAsImV4cCI6MTU5OTUwNzkzMH0.mRwRVHsX2Z6DBMzhBac-n59G51dxTfeU9InjDPpkydY"/> -->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <script>
